--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "react": "16.3.1",
-    "react-native": "0.55.2"
+    "react-native": "0.55.2",
+    "react-native-sortable-listview": "0.0.8",
+    "react-native-vector-icons": "^2.1.0",
+    "react-timer-mixin": "^0.13.3",
+    "realm": "^0.14.3"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
